--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -11,7 +11,7 @@
           <pre id="generatedCode" class="beforeClicked"><code></code></pre>
           <div id="output"></div>
           <button id="button">コードを表示する</button>
-          <div id="errorMessage" //class="hidden"//>コラ～</div>
+          <div id="errorMessage" //class="safe"//>何もエラーは起きてません</div>
         </div>
         <div id="blocklyDiv"></div>
       </div>
