ポップアップのキソを作った

--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -15,6 +15,17 @@
         </div>
         <div id="blocklyDiv"></div>
       </div>
+      <!--
+      <label for="popupflag1">popup 1</label>
+      <input type="checkbox" class="popup-flag1" id="popupFlag1">
+      <label class="popup-background" for="popupFlag1"></label>
+      <div class="popup">
+        <label class="close-button" for="popupFlag1">×</label>
+        <div class="content">
+          content
+        </div>
+      </div>
+      --->
     </div>
   </body>
 </html>
