htmlのそとのコードが表示されないようにしてタイトルが反映されないようにしたのとタイトルブロックがhtmlのHEAD以外のところに入らないようにしましたあとhtml_head-bodyブロックが一度に一つまでにしか場に出せないようにしました。

--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -9,6 +9,7 @@
       <div id="pageContainer">
         <div id="outputPane">
           <pre id="generatedCode" class="beforeClicked"><code></code></pre>
+          <div id="wstitle"></div>
           <div id="output"></div>
           <button id="button">コードを表示する</button>
         </div>
