stash と main の矛盾なおし

--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -27,6 +27,14 @@
         </div>
       </div>
       --->
+      <div id="popup-outer">
+        <div id="popup-inner">
+          <div id="close">×</div>
+          <div id="message">
+            テストテストテストテストテストテスト
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
