ポップアップ作成

--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -27,7 +27,8 @@
         </div>
       </div>
       --->
-      <div id="popup-outer">
+      <div id="popup">
+        <div id="popup-outer"></div>
         <div id="popup-inner">
           <div id="close">×</div>
           <div id="message">
