--- a/Blockly/src/tutorial/html-introduction/index.html
+++ b/Blockly/src/tutorial/html-introduction/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -15,7 +15,7 @@
           <div id="errorMessage" //class="safe"//>何もエラーは起こってません</div>
         </div>
         <div id="blocklyDiv"></div>
-      </div> -->
+      </div>
       <!--
       <label for="popupflag1">popup 1</label>
       <input type="checkbox" class="popup-flag1" id="popupFlag1">
@@ -27,7 +27,7 @@
         </div>
       </div>
       --->
-      <!-- <div id="popup">
+      <div id="popup">
         <div id="popup-outer"></div>
         <div id="popup-inner">
           <div id="close">×</div>
@@ -36,20 +36,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </body>
-</html> -->
-
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Blockly Sample App</title>
-  </head>
-  <body>
-    <div>
-      <a href="./tutorial/index.html">チュートリアル</a>
-      <a href="./sandbox">サンドボックス</a>
     </div>
   </body>
 </html>
