--- a/Blockly/src/sandbox/index.html
+++ b/Blockly/src/sandbox/index.html
@@ -11,7 +11,7 @@
           <pre id="generatedCode" class="beforeClicked"><code></code></pre>
           <div id="wstitle"></div>
           <div id="output"></div>
-          <button id="button">コードを表示する</button>
+          <button id="code-button">コードを表示する</button>
           <div id="errorMessage" //class="safe"//>何もエラーは起こってません</div>
         </div>
         <div id="blocklyDiv"></div>
@@ -30,9 +30,30 @@
       <div id="popup">
         <div id="popup-outer"></div>
         <div id="popup-inner">
-          <div id="close">×</div>
-          <div id="message">
-            テストテストテストテストテストテスト
+          <div id="popup-title">ポップアップタイトル</div>
+          <div id="popup-close">×</div>
+          <div id="popup-button-container">
+            <button class="popup-buttons" id="popup-button-0">ボタン1</button>
+            <button class="popup-buttons" id="popup-button-1">ボタン2</button>
+            <button class="popup-buttons" id="popup-button-2">ボタン3</button>
+            <button class="popup-buttons" id="popup-button-3">ボタン4</button>
+          </div>
+          <div id="popup-message">
+              <!-- ここにスライドコンテンツを表示 -->
+              <div class="popup-slides" id="popupSlide-0">
+                <section>
+                  <h2>スライド1</h2>
+                  <p></p>
+                </section>
+              </div>
+              <div class="popup-slides" id="popup-slide-1" style="display: none;">スライド2の内容</div>
+              <div class="popup-slides" id="popup-slide-2" style="display: none;">スライド3の内容</div>
+              <div class="popup-slides" id="popup-slide-3" style="display: none;">スライド4の内容</div>
+          </div>
+          <div id="popup-navigation">
+              <button id="popup-prev">戻る</button>
+              <button id="popup-next">進む</button>
+              <button id="popup-end">始める</button>
           </div>
         </div>
       </div>
