ヘッダーを追加

--- a/Blockly/src/sandbox/index.html
+++ b/Blockly/src/sandbox/index.html
@@ -5,6 +5,24 @@
     <title>Blockly Sample App</title>
   </head>
   <body>
+    <header>
+      <div class="header-container">
+          <a href="#" class="header-logo">Blosite</a>
+          <!-- <sub>by ut.code();</sub> -->
+          <nav>
+              <ul class="nav-links">
+                  <li><a href="./..">トップページに戻る</a></li>
+                  <li id="header-help"><a>ヘルプ</a></li>
+                  <li><a href="#">Q&A</a></li>
+              </ul>
+              <div class="hamburger">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+              </div>
+          </nav>
+      </div>
+  </header>
     <div class="split-view vertical">
       <div id="pageContainer">
         <div id="outputPane">
