レイアウト崩れを修正

--- a/Blockly/src/sandbox/index.html
+++ b/Blockly/src/sandbox/index.html
@@ -5,7 +5,7 @@
     <title>Blockly Sample App</title>
   </head>
   <body>
-    <div id="content" style="display :none;">
+    <div id="content" style="visibility: hidden;">
       <header>
         <div class="header-container">
           <a href="#" class="header-logo">Blosite</a>
