--- a/Blockly/src/sandbox/index.html
+++ b/Blockly/src/sandbox/index.html
@@ -53,8 +53,11 @@
             <div id="popup-close">×</div>
             <div id="popup-button-container">
               <button class="popup-buttons" id="popup-button-0">ボタン1</button>
+              <span class="popup-arrow">➡️</span> 
               <button class="popup-buttons" id="popup-button-1">ボタン2</button>
+              <span class="popup-arrow">➡️</span> 
               <button class="popup-buttons" id="popup-button-2">ボタン3</button>
+              <span class="popup-arrow">➡️</span> 
               <button class="popup-buttons" id="popup-button-3">ボタン4</button>
             </div>
             <div id="popup-message">
