初期状態のブロックを追加（試験的）

--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -40,7 +40,7 @@
   </body>
 </html> -->
 
-<!doctype html>
+<!-- <!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -52,4 +52,38 @@
       <a href="./sandbox">サンドボックス</a>
     </div>
   </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>トップページ</title>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>ウェブアプリへようこそ</h1>
+            <p>最新のテクノロジーで学び、遊びましょう</p>
+        </header>
+
+        <section class="content">
+            <div class="card">
+                <h2>チュートリアル</h2>
+                <p>ここでは、基本的な使い方や様々な機能を学ぶことができます。</p>
+                <a href="./tutorial" class="btn">チュートリアルページへ</a>
+            </div>
+            <div class="card">
+                <h2>サンドボックス</h2>
+                <p>自由にコードを書いて、試してみましょう！自分のペースで学べます。</p>
+                <a href="./sandbox" class="btn">サンドボックスページへ</a>
+            </div>
+        </section>
+
+        <footer>
+            <p>&copy; 2024 ウェブアプリ All rights reserved.</p>
+        </footer>
+    </div>
+</body>
 </html>
