表計算チュートリアルを追加

--- a/Blockly/src/tutorial/index.html
+++ b/Blockly/src/tutorial/index.html
@@ -11,10 +11,13 @@
     </header>
     <p></p>
     <div>
-        <a href="/html-introduction">
+        <a href="./tutorial/html-introduction">
             <p>HTMLに触れてみよう</p>
             <p>まずはここから</p>
         </a>
+        <a href="./tutorial/spread-sheet">
+            <p>表計算</p>
+            <p>やってみよう</p>
         </a>
     </div>
     <footer>
