--- a/Blockly/src/tutorial/html-introduction/index.html
+++ b/Blockly/src/tutorial/html-introduction/index.html
@@ -12,7 +12,7 @@
           <div id="wstitle"></div>
           <div id="output"></div>
           <button id="button">コードを表示する</button>
-          <div id="errorMessage" //class="safe"//>何もエラーは起こってません</div>
+          <div id="errorMessage">何もエラーは起こってません</div>
         </div>
         <div id="blocklyDiv"></div>
       </div>
