--- a/Blockly/src/tutorial/spread-sheet/index.html
+++ b/Blockly/src/tutorial/spread-sheet/index.html
@@ -31,7 +31,7 @@
             <div id="wstitle"></div>
             <div id="output"></div>
             <button id="code-button">コードを表示する</button>
-            <div id="errorMessage" //class="safe"//>何もエラーは起こってません</div>
+            <div id="errorMessage">何もエラーは起こってません</div>
           </div>
           <div id="blocklyDiv"></div>
         </div>
