index.jsやindex.cssの共通化　ファイル構成の修正

--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -1,73 +1,20 @@
-<!-- <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Blockly Sample App</title>
-  </head>
-  <body>
-    <div class="split-view vertical">
-      <div id="pageContainer">
-        <div id="outputPane">
-          <pre id="generatedCode" class="beforeClicked"><code></code></pre>
-          <div id="wstitle"></div>
-          <div id="output"></div>
-          <button id="button">コードを表示する</button>
-          <div id="errorMessage" //class="safe"//>何もエラーは起こってません</div>
-        </div>
-        <div id="blocklyDiv"></div>
-      </div> -->
-      <!--
-      <label for="popupflag1">popup 1</label>
-      <input type="checkbox" class="popup-flag1" id="popupFlag1">
-      <label class="popup-background" for="popupFlag1"></label>
-      <div class="popup">
-        <label class="close-button" for="popupFlag1">×</label>
-        <div class="content">
-          content
-        </div>
-      </div>
-      --->
-      <!-- <div id="popup">
-        <div id="popup-outer"></div>
-        <div id="popup-inner">
-          <div id="close">×</div>
-          <div id="message">
-            テストテストテストテストテストテスト
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html> -->
-
-<!-- <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Blockly Sample App</title>
-  </head>
-  <body>
-    <div>
-      <a href="./tutorial/index.html">チュートリアル</a>
-      <a href="./sandbox">サンドボックス</a>
-    </div>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>トップページ</title>
+    <title>Blosite</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>ウェブアプリへようこそ</h1>
-            <p>最新のテクノロジーで学び、遊びましょう</p>
+            <h1>Blositeへようこそ</h1>
+            <p></p>
         </header>
-
+        <section class="about"></section>
+          <h2>Blositeとは？</h2>
+          <p>Blositeでは、直感的に操作しやすいブロックプログラミングでWebページを作ることができます。</p>
+        </section>
         <section class="content">
             <div class="card">
                 <h2>チュートリアル</h2>
@@ -82,7 +29,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2024 ウェブアプリ All rights reserved.</p>
+            <p>ut.code();</p>
         </footer>
     </div>
 </body>
