--- a/Blockly/src/tutorial/spread-sheet/index.html
+++ b/Blockly/src/tutorial/spread-sheet/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Blockly Sample App</title>
+    <title>チュートリアル：表計算</title>
   </head>
   <body>
     <div id="content" style="visibility: hidden;">
