おみくじのチュートリアル

--- a/Blockly/src/tutorial/index.html
+++ b/Blockly/src/tutorial/index.html
@@ -13,9 +13,9 @@
     <div>
         <a href="/html-introduction">
             <p>HTMLに触れてみよう</p>
-            <p>まずはここから</p>
+            <p >まずはここから</p>
         </a>
-        </a>
+        <a href="./tutorial/omikuji/index.html" class ="btn">おみくじを作ってみよう</a>
     </div>
     <footer>
         <p>&copy; 2023 サンプルページ</p>
