おみくじの追加

--- a/Blockly/src/tutorial/index.html
+++ b/Blockly/src/tutorial/index.html
@@ -12,18 +12,47 @@
             <a href="./.." class="btn">トップページに戻る</a>
         </header>
         <section>
-            <div class="group-title">はじめはここから</div>
+            <div class="group-title">まずはじめに</div>
             <div class="group">
                 <div class="card">
                     <a href="./tutorial/html-introduction" class="btn">
-                        <h3>HTMLについて知ろう</h3>
+                        <h3>Blositeって？</h3>
+                        <p>Blositeで何ができるか見てみよう！</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="group-title">学習しよう</div>
+            <div class="group">
+                <div class="card">
+                    <a href="./tutorial/html-introduction" class="btn">
+                        <h3>1. HTMLについて知ろう</h3>
                         <p>ウェブサイトの形を決める方法を学ぼう！</p>
                     </a>
                 </div>
                 <div class="card">
                     <a href="./tutorial/html-introduction" class="btn">
-                        <h3>いろいろなHTML要素</h3>
+                        <h3>2. いろいろなHTML要素</h3>
                         <p>様々なHTML要素を使ってみよう！</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="./tutorial/css-introduction" class="btn">
+                        <h3>3. CSSについて知ろう</h3>
+                        <p>ウェブサイトの見た目を整える方法を学ぼう！</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="./tutorial/css-introduction" class="btn">
+                        <h3>4. 変数と関数</h3>
+                        <p>ウェブサイトの見た目を整える方法を学ぼう！</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="./tutorial/css-introduction" class="btn">
+                        <h3>5. DOM操作で制御しよう</h3>
+                        <p>ウェブサイトの見た目を整える方法を学ぼう！</p>
                     </a>
                 </div>
                 <div class="card">
@@ -38,7 +67,7 @@
             <div class="group-title">実践しよう</div>
             <div class="group">
                 <div class="card">
-                    <a href="./tutorial/spread-sheet" class="btn">
+                    <a href="./tutorial/omikuji" class="btn">
                         <h3>おみくじ</h3>
                         <p>条件分岐と表示の処理を実践しよう！</p>
                     </a>
