--- a/Blockly/src/tutorial/index.html
+++ b/Blockly/src/tutorial/index.html
@@ -15,9 +15,9 @@
             <div class="group-title">まずはじめに</div>
             <div class="group">
                 <div class="card">
-                    <a href="./tutorial/html-introduction" class="btn">
+                    <a href="./tutorial/blosite-introduction" class="btn">
                         <h3>Blositeって？</h3>
-                        <p>Blositeで何ができるか見てみよう！</p>
+                        <p>Blositeで何ができるか<br>見てみよう！</p>
                     </a>
                 </div>
             </div>
@@ -28,37 +28,37 @@
                 <div class="card">
                     <a href="./tutorial/html-introduction" class="btn">
                         <h3>1. HTMLについて知ろう</h3>
-                        <p>ウェブサイトの形を決める方法を学ぼう！</p>
+                        <p>ウェブサイトの形を<br>決める方法を学ぼう！</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./tutorial/html-introduction" class="btn">
+                    <a href="./tutorial/various-html-elements" class="btn">
                         <h3>2. いろいろなHTML要素</h3>
-                        <p>様々なHTML要素を使ってみよう！</p>
+                        <p>様々なHTML要素を<br>使ってみよう！</p>
                     </a>
                 </div>
                 <div class="card">
                     <a href="./tutorial/css-introduction" class="btn">
                         <h3>3. CSSについて知ろう</h3>
-                        <p>ウェブサイトの見た目を整える方法を学ぼう！</p>
+                        <p>ウェブサイトの見た目を<br>整える方法を学ぼう！</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./tutorial/css-introduction" class="btn">
+                    <a href="./tutorial/variables-and-functions" class="btn">
                         <h3>4. 変数と関数</h3>
-                        <p>ウェブサイトの見た目を整える方法を学ぼう！</p>
+                        <p>プログラミングの基礎的な<br>考え方を身に着けよう！</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./tutorial/css-introduction" class="btn">
-                        <h3>5. DOM操作で制御しよう</h3>
-                        <p>ウェブサイトの見た目を整える方法を学ぼう！</p>
+                    <a href="./tutorial/dom-manipulation" class="btn">
+                        <h3>5. DOM操作してみよう</h3>
+                        <p>HTML要素を制御しよう！</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./tutorial/css-introduction" class="btn">
-                        <h3>CSSについて知ろう</h3>
-                        <p>ウェブサイトの見た目を整える方法を学ぼう！</p>
+                    <a href="./tutorial/control-structure" class="btn">
+                        <h3>6. 繰り返しと条件分岐</h3>
+                        <p>プログラミングの基本的な<br>処理を試してみよう！</p>
                     </a>
                 </div>
             </div>
@@ -69,19 +69,19 @@
                 <div class="card">
                     <a href="./tutorial/omikuji" class="btn">
                         <h3>おみくじ</h3>
-                        <p>条件分岐と表示の処理を実践しよう！</p>
+                        <p>条件分岐と表示の処理を<br>実践しよう！</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./tutorial/spread-sheet" class="btn">
+                    <a href="./tutorial/todo" class="btn">
                         <h3>ToDoアプリ</h3>
-                        <p>HTML要素を自在に制御しよう！</p>
+                        <p>HTML要素を自在に<br>制御しよう！</p>
                     </a>
                 </div>
                 <div class="card">
                     <a href="./tutorial/spread-sheet" class="btn">
                         <h3>表計算</h3>
-                        <p>！</p>
+                        <p>これまで学んだことを<br>活用しよう！</p>
                     </a>
                 </div>
             </div>
