チュートリアルの各ページのファイルを作成

--- a/Blockly/src/tutorial/spread-sheet/index.html
+++ b/Blockly/src/tutorial/spread-sheet/index.html
@@ -31,21 +31,10 @@
             <div id="wstitle"></div>
             <div id="output"></div>
             <button id="code-button">コードを表示する</button>
-            <div id="errorMessage" //class="safe"//>何もエラーは起こってません</div>
+            <div id="errorMessage">何もエラーは起こってません</div>
           </div>
           <div id="blocklyDiv"></div>
         </div>
-        <!--
-        <label for="popupflag1">popup 1</label>
-        <input type="checkbox" class="popup-flag1" id="popupFlag1">
-        <label class="popup-background" for="popupFlag1"></label>
-        <div class="popup">
-          <label class="close-button" for="popupFlag1">×</label>
-          <div class="content">
-            content
-          </div>
-        </div>
-        --->
         <div id="popup">
           <div id="popup-outer"></div>
           <div id="popup-inner">
