supabaseに画像を保存

--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -32,7 +32,7 @@
             <div class="card">
                 <h2></h2>
                 <p>他の人が作って公開したウェブサイトに触れてみよう！</p>
-                <a href="./sandbox" class="btn">共有ページへ</a>
+                <a href="./share" class="btn">共有ページへ</a>
             </div>
             <div class="card">
                 <h2>よくある質問</h2>
