--- a/Blockly/src/tutorial/todo/index.html
+++ b/Blockly/src/tutorial/todo/index.html
@@ -31,7 +31,7 @@
             <div id="wstitle"></div>
             <div id="output"></div>
             <button id="code-button">コードを表示する</button>
-            <div id="errorMessage" //class="safe"//>何もエラーは起こってません</div>
+            <div id="errorMessage">何もエラーは起こってません</div>
           </div>
           <div id="blocklyDiv"></div>
         </div>
@@ -77,14 +77,12 @@
                     この３つが挙げられます。<br>
                     まずリストを作る元となる&lt;ul&gt;タグと、テキストを入れる場所を作る&lt;input&gt;タグを&lt;body&gt;タグに入れてみましょう。
                   </p>
-                  <!--
                   <h2>IDでタグ付け</h2>
                   <p>
                     次に、&lt;ul&gt;と&lt;input&gt;にIDブロックをつけましょう。<br>
                     IDをつけることによって、この後行うJavaScriptを用いた作業でこれらのタグに色々な機能をつけることができます。<br>
                     IDの名前は今回は&lt;ul&gt;にtodo-list、&lt;input&gt;にtodo-inputと入れることにしましょう。
                   </p>
-                  -->
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-1" style="display: none;">
