htmlを知ろうのチュートリアルを作りました。

--- a/Blockly/src/tutorial/index.html
+++ b/Blockly/src/tutorial/index.html
@@ -15,7 +15,7 @@
             <div class="group-title">はじめはここから</div>
             <div class="group">
                 <div class="card">
-                    <a href="./tutorial/html-introduction" class="btn">
+                    <a href="./tutorial/htmlwosiru" class="btn">
                         <h3>HTMLについて知ろう</h3>
                         <p>ウェブサイトの形を決める方法を学ぼう！</p>
                     </a>
