いろいろなHTML要素のチュートリアル追加　UI調整

--- a/Blockly/src/index.html
+++ b/Blockly/src/index.html
@@ -17,7 +17,7 @@
                 <p>Blositeでは、直感的に操作しやすいブロックプログラミングでWebページを作ることができます。
                     プログラミングが初めての方でも気軽に楽しめます！
                 </p>
-                <a href="" class="btn">駒場祭ウェブサイトに戻る</a>
+                <a href="" class="btn">ut.code(); 駒場祭ウェブサイトに戻る</a>
             </div>
             <div class="card">
                 <h2>チュートリアル</h2>
